<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/icon"
        android:title="@string/icon_movies"
        android:icon="@drawable/ic_star"
        android:iconTint="#ffeb3b"
        app:showAsAction="ifRoom"
        tools:targetApi="o" />

    <item
        android:id="@+id/topRated_menu"
        android:checkable="true"
        android:checked="true"
        android:icon="@drawable/ic_star"
        android:iconTint="#ffeb3b"
        android:orderInCategory="1"
        android:title="@string/top_rated"
        app:showAsAction="never|withText"
        tools:targetApi="o" />
    <item
        android:id="@+id/popular_menu"
        android:checkable="true"
        android:checked="false"
        android:icon="@drawable/ic_stat_name"
        android:iconTint="#cef7f4"
        android:orderInCategory="2"
        android:title="@string/popular_movies"
        app:showAsAction="never|withText"
        tools:targetApi="o" />
    <item
        android:id="@+id/favorite_menu"
        android:checkable="true"
        android:checked="false"
        android:icon="@drawable/ic_star"
        android:iconTint="#f45"
        android:orderInCategory="3"
        android:title="@string/Favorite_Movies"
        app:showAsAction="never|withText"
        tools:targetApi="o" />
    <item
        android:id="@+id/delete_all_favorite"
        android:orderInCategory="4"
        android:title="@string/delete_all_favorite"
        app:showAsAction="never|withText"
        tools:targetApi="o" />

</menu>