<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3e3e3e"
    android:scrollbars="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/img_detail_movie"
            android:layout_width="match_parent"
            android:layout_height="500sp"
            android:background="@android:color/darker_gray"
            android:contentDescription="@string/todo"
            android:fitsSystemWindows="true"
            android:scaleType="centerCrop"
            app:layout_collapseMode="parallax"
            app:srcCompat="@drawable/cinema" />

        <TextView
            android:text="@string/movie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textColor="#defaf6"
            android:textSize="25sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/Movie_title"
            android:layout_width="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="#fff"
            android:textSize="20sp"
            android:layout_marginStart="20sp" />
        <TextView
            android:text="@string/average_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textColor="#defaf6"
            android:textSize="25sp"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:orientation="horizontal"
            android:layout_marginStart="20sp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_margin="5dp"
                android:src="@drawable/ic_star"
                android:contentDescription="@string/todo"
                android:layout_marginStart="20sp" />
            <TextView
                android:id="@+id/Movie_rate"
                android:textColor="#f1eeee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"/>
        </LinearLayout>
        <TextView
            android:text="@string/release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#defaf6"
            android:layout_margin="5dp"
            android:textSize="25sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/Movie_release"
            android:layout_width="wrap_content"
            android:textColor="#f5f5ed"
            android:layout_marginLeft="20sp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginStart="20sp" />



        <TextView
            android:text="@string/OverView"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#defaf6"
            android:textSize="25sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/overview"
            android:textColor="#f5f5ed"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"/>
    </LinearLayout>

</ScrollView>